# rust_on_avr

./: .gitignore  Cargo.toml  Dockerfile  README.md  Ravedude.toml  docker-compose.yml  run.py  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/: main.rs
