[package]
name = "firmware"
version = "0.0.0" # Versioning is done automatically. This is just a placeholder.
edition = "2021"

[[bin]]
name = "firmware"
test = false
bench = false

[dependencies]
panic-halt = "=0.2.0"
ufmt = "=0.2.0"
nb = "=1.1.0"
embedded-hal = "=1.0.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-leonardo"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
